[gd_scene load_steps=10 format=3 uid="uid://b1cscmejnwcb3"]

[ext_resource type="Texture2D" uid="uid://2aj6jdbrwcpk" path="res://Sprites/Sprite-0001.png" id="1_4hvuo"]
[ext_resource type="Shader" path="res://Shaders/smooth_pixels.gdshader" id="1_didp7"]
[ext_resource type="Texture2D" uid="uid://dyxw0uf03xy0s" path="res://Sprites/windrad_level_basis.png" id="2_lyd6k"]
[ext_resource type="Texture2D" uid="uid://6ljupcl4bwfy" path="res://Sprites/Windrad_level.png" id="3_y4dr7"]
[ext_resource type="Script" uid="uid://bpvurs2geq8y4" path="res://Scripts/windrad_level1.gd" id="4_didp7"]
[ext_resource type="Texture2D" uid="uid://bniwlcunoicx2" path="res://Sprites/Turbine.png" id="5_y4dr7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2a60c"]
shader = ExtResource("1_didp7")

[sub_resource type="CircleShape2D" id="CircleShape2D_didp7"]
radius = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2a60c"]
radius = 39.35
height = 156.04855

[node name="Level1" type="Node2D"]
material = SubResource("ShaderMaterial_2a60c")
use_parent_material = true

[node name="MarginContainer" type="MarginContainer" parent="."]
use_parent_material = true
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
y_sort_enabled = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="ColorRect" type="ColorRect" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Sprite0001" type="Sprite2D" parent="MarginContainer"]
z_index = -3
texture = ExtResource("1_4hvuo")
centered = false

[node name="Windraeder" type="Node2D" parent="MarginContainer"]
use_parent_material = true
script = ExtResource("4_didp7")

[node name="Windrad1" type="Node2D" parent="MarginContainer/Windraeder"]
use_parent_material = true
scale = Vector2(0.8, 0.8)

[node name="WindradLevelBasis" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad1"]
use_parent_material = true
position = Vector2(269.75, 566.45996)
scale = Vector2(0.5, 0.35)
texture = ExtResource("2_lyd6k")

[node name="WindradLevel" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad1"]
use_parent_material = true
position = Vector2(269.75, 372.46)
scale = Vector2(0.52, 0.52)
texture = ExtResource("3_y4dr7")
offset = Vector2(68, -39.960785)

[node name="Turbine" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad1/WindradLevel"]
self_modulate = Color(0.48500448, 0.11504131, 0.9840531, 1)
position = Vector2(-153.36539, -408.57697)
scale = Vector2(0.6251929, 0.6251929)
texture = ExtResource("5_y4dr7")

[node name="Area2D" type="Area2D" parent="MarginContainer/Windraeder/Windrad1/WindradLevel/Turbine"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/Windraeder/Windrad1/WindradLevel/Turbine/Area2D"]
shape = SubResource("CircleShape2D_didp7")

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad1"]
visible = false
position = Vector2(298, 243)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_y4dr7")

[node name="Windrad2" type="Node2D" parent="MarginContainer/Windraeder"]
use_parent_material = true
position = Vector2(422.99997, -25.999998)
scale = Vector2(0.8, 0.8)

[node name="WindradLevelBasis" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad2"]
use_parent_material = true
position = Vector2(269.75, 566.45996)
scale = Vector2(0.5, 0.35)
texture = ExtResource("2_lyd6k")

[node name="WindradLevel" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad2"]
use_parent_material = true
position = Vector2(269.75, 372.46)
rotation = -3.0828893
scale = Vector2(0.52, 0.52)
texture = ExtResource("3_y4dr7")
offset = Vector2(68, -39.960785)

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad2"]
visible = false
position = Vector2(298, 243)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_y4dr7")

[node name="Windrad3" type="Node2D" parent="MarginContainer/Windraeder"]
use_parent_material = true
position = Vector2(847, 6.9999943)
scale = Vector2(0.8, 0.8)

[node name="WindradLevelBasis" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad3"]
use_parent_material = true
position = Vector2(269.75, 566.45996)
scale = Vector2(0.5, 0.35)
texture = ExtResource("2_lyd6k")

[node name="WindradLevel" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad3"]
use_parent_material = true
position = Vector2(269.75, 372.46)
rotation = -2.384097
scale = Vector2(0.52, 0.52)
texture = ExtResource("3_y4dr7")
offset = Vector2(68, -39.960785)

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Windraeder/Windrad3"]
visible = false
position = Vector2(298, 243)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_y4dr7")

[node name="Turbine" type="Sprite2D" parent="MarginContainer/Windraeder"]
self_modulate = Color(0.4862745, 0.11372549, 0.9843137, 0.49411765)
use_parent_material = true
position = Vector2(211, 76)
scale = Vector2(0.5254775, 0.5254775)
texture = ExtResource("5_y4dr7")

[node name="Area2D" type="Area2D" parent="MarginContainer/Windraeder/Turbine"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/Windraeder/Turbine/Area2D"]
shape = SubResource("CapsuleShape2D_2a60c")
